Fix mathjax overflow equation width

--- a/src/app.css
+++ b/src/app.css
@@ -118,10 +118,20 @@ i {
 }
 
 mjx-container {
-  width: auto !important;
+  width: max-content !important;
   margin: 0 !important;
+  left: 50%;
+  transform: translateX(-50%);
+  position: relative;
   svg {
     display: inline;
+  }
+}
+
+@media (max-width: 520px) {
+  mjx-container {
+    left: 0;
+    transform: translateX(0);
   }
 }
 
